# CreditApprovalBackend

./: .env.template  .gitignore  Dockerfile  creditApproval.conf  docker-compose.yml  manage.py  pyproject.toml  readme.md  requirements.txt
CreditApprovalBackend/: asgi.py  settings.py  urls.py  wsgi.py
core/: constants.py  loan_test_data.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
core/management/commands/: load_data_from_excel.py
core/migrations/: 0001_initial.py
custom_auth/migrations/: 0001_initial.py
